Correct icon overflow in topbar when set to active mode.

--- a/client/src/components/topbar/topbar.scss
+++ b/client/src/components/topbar/topbar.scss
@@ -75,6 +75,7 @@
     color: white;
 
     .hamburger {
+      overflow: hidden;
       span {
         &:first-child {
           background-color: white;
